@@ -52,4 +52,10 @@
          install-size="0"
          version="0.0.0"/>
 
+   <plugin
+         id="org.eclipse.linuxtools.valgrind.tests"
+         download-size="0"
+         install-size="0"
+         version="0.0.0"/>
+
 </feature>
